--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -1,88 +1,3 @@
-header {
-  display: flex;
-  justify-content: center;
-  border-bottom: 1px solid #211f1a;
-  background-color: #fffcfa;
-  position: sticky;
-  top: 0;
-  z-index: 9999;
-}
-
-.header-wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 1440px;
-}
-.header-wrapper ul {
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding-left: 24px;
-}
-.header-wrapper ul li {
-  padding: 16px 12px;
-}
-.header-wrapper ul li a {
-  text-decoration: none;
-  color: #211f1a;
-  font-size: 16px;
-  font-weight: bold;
-}
-.header-wrapper .nav-booking {
-  text-decoration: none;
-  color: #211f1a;
-  font-size: 16px;
-  font-weight: bold;
-  padding: 0 24px;
-}
-
-.accordion-wrapper {
-  width: 612px;
-}
-
-.accordion-item {
-  padding: 24px 0 12px 36px;
-  border-bottom: 1px solid #211f1a;
-  transition: all 0.5s cubic-bezier(0, 1, 0, 1);
-}
-
-.accordion-item.show {
-  padding: 24px 0 12px 36px;
-  border-bottom: 1px solid #211f1a;
-  transition: all 0.5s cubic-bezier(0, 1, 0, 1);
-}
-
-.accordion-title {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-right: 24px;
-  cursor: pointer;
-}
-.accordion-title h2 {
-  font-weight: 500;
-  font-size: 30px;
-  margin: 0;
-}
-
-.accordion-content {
-  font-size: 12px;
-  width: 60%;
-  max-height: 0;
-  color: #211f1a;
-  overflow: hidden;
-  transition: all 0.5s cubic-bezier(0, 1, 0, 1);
-}
-
-.accordion-content.show {
-  font-size: 12px;
-  width: 60%;
-  height: auto;
-  max-height: 9999px;
-  transition: all 0.5s cubic-bezier(1, 0, 1, 0);
-}
-
 .page-home {
   display: flex;
   flex-direction: column;
@@ -156,21 +71,6 @@ header {
   margin: 32px 0 48px 0;
   font-size: 16px;
 }
-.section-1 .section-1b .section-1b-wrapper .section-1b-text a {
-  text-decoration: none;
-  color: #211f1a;
-  font-size: 16px;
-  font-weight: bold;
-  border: 2px solid #211f1a;
-  padding: 16px 32px;
-  border-radius: 8px;
-  transition: 0.5s;
-}
-.section-1 .section-1b .section-1b-wrapper .section-1b-text a:hover {
-  background-color: olive;
-  color: white;
-  transition: 0.5s;
-}
 
 .section-2 {
   display: flex;
@@ -193,7 +93,7 @@ header {
   width: 800px;
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
 }
 .section-2 .section-2a .section-2a-wrapper .section-2a-copy h2 {
   margin: 0;
@@ -247,15 +147,8 @@ header {
   margin: 32px 0;
 }
 .section-3 .section-3b a {
-  color: #211f1a;
-  text-decoration: none;
-  padding: 16px 32px;
-  border: 2px solid #211f1a;
-  border-radius: 8px;
-  font-weight: bold;
   margin-top: 74px;
   margin-bottom: 400px;
-  display: inline-block;
 }
 
 .section-4 {
@@ -449,6 +342,122 @@ header {
   margin-top: 20px;
 }
 
+.section-6-wrapper {
+  margin: 164px 0 240px;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  border-bottom: 1px solid #211f1a;
+  background-color: #fffcfa;
+  position: sticky;
+  top: 0;
+  z-index: 9999;
+}
+
+.header-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 1440px;
+}
+.header-wrapper ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding-left: 24px;
+}
+.header-wrapper ul li {
+  padding: 16px 12px;
+}
+.header-wrapper ul li a {
+  text-decoration: none;
+  color: #211f1a;
+  font-size: 16px;
+  font-weight: bold;
+}
+.header-wrapper .nav-booking {
+  text-decoration: none;
+  color: #211f1a;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 0 24px;
+}
+
+.accordion-wrapper {
+  width: 612px;
+}
+
+.accordion-item {
+  padding: 24px 0 12px 36px;
+  border-bottom: 1px solid #211f1a;
+  transition: all 0.5s cubic-bezier(0, 1, 0, 1);
+}
+
+.accordion-item.show {
+  padding: 24px 0 12px 36px;
+  border-bottom: 1px solid #211f1a;
+  transition: all 0.5s cubic-bezier(0, 1, 0, 1);
+}
+
+.accordion-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 24px;
+  cursor: pointer;
+}
+.accordion-title h2 {
+  font-weight: 500;
+  font-size: 30px;
+  margin: 0;
+}
+
+.accordion-content {
+  font-size: 12px;
+  width: 60%;
+  max-height: 0;
+  color: #211f1a;
+  overflow: hidden;
+  transition: all 0.5s cubic-bezier(0, 1, 0, 1);
+}
+
+.accordion-content.show {
+  font-size: 12px;
+  width: 60%;
+  height: auto;
+  max-height: 9999px;
+  transition: all 0.5s cubic-bezier(1, 0, 1, 0);
+}
+
+.section-6-wrapper {
+  background-color: lightblue;
+  width: 100%;
+}
+
+label {
+  font-size: 32px;
+}
+
+select {
+  font-size: 32px;
+  font-weight: bold;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background: none;
+  border: none;
+  border-bottom: 1px #211f1a;
+  padding: 0.5em 3em 1em 0.5em;
+}
+select option {
+  background-color: #211f1a;
+  color: white;
+  font-size: 16px;
+  padding: 12px 12px;
+}
+
 *,
 *::after,
 *::before {
@@ -459,4 +468,21 @@ body {
   margin: 0;
   background-color: #fffcfa;
   font-family: "Poppins", sans-serif;
+}
+
+.cta-btn {
+  display: inline-block;
+  text-decoration: none;
+  color: #211f1a;
+  font-size: 16px;
+  font-weight: bold;
+  border: 2px solid #211f1a;
+  padding: 16px 32px;
+  border-radius: 8px;
+  transition: 0.5s;
+}
+.cta-btn:hover {
+  background-color: olive;
+  color: white;
+  transition: 0.5s;
 }/*# sourceMappingURL=App.css.map */
