--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,7 +1,8 @@
 // Pages & Components Style Sheets
+@use "./pages/Home";
 @use "./components/Header";
 @use "./components/Accordion";
-@use "./pages/Home";
+@use "./components/DropdownSection";
 
 // Abstracts
 @use "./abstracts/colors";
@@ -16,4 +17,21 @@ body {
   margin: 0;
   background-color: colors.$bg-color;
   font-family: "Poppins", sans-serif;
+}
+
+.cta-btn {
+  display: inline-block;
+  text-decoration: none;
+  color: colors.$black-theme;
+  font-size: 16px;
+  font-weight: bold;
+  border: 2px solid colors.$black-theme;
+  padding: 16px 32px;
+  border-radius: 8px;
+  transition: 0.5s;
+  &:hover {
+    background-color: olive;
+    color: white;
+    transition: 0.5s;
+  }
 }
