--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -82,7 +82,7 @@
   border-right: 1px solid #211f1a;
 }
 .section-2 .section-2a .section-2a-wrapper {
-  background-color: #788a6d;
+  background-color: #94a689;
   height: 100%;
   width: 100%;
   padding: 134px 0 0 24px;
