--- a/src/scss/pages/_Home.scss
+++ b/src/scss/pages/_Home.scss
@@ -84,7 +84,7 @@
     width: 58%;
     border-right: 1px solid c.$black-theme;
     .section-2a-wrapper {
-      background-color: #788a6d;
+      background-color: #94a689;
       height: 100%;
       width: 100%;
       padding: 134px 0 0 24px;
