--- a/src/scss/components/_Accordion.scss
+++ b/src/scss/components/_Accordion.scss
@@ -2,18 +2,19 @@
 
 .accordion-wrapper {
   width: 612px;
+  padding-left: 24px;
 }
 
 .accordion-item {
-  padding: 24px 0 12px 36px;
+  padding: 24px 0 24px 36px;
   border-bottom: 1px solid c.$black-theme;
   transition: all 0.5s cubic-bezier(0, 1, 0, 1);
 }
 
 .accordion-item.show {
-  padding: 24px 0 12px 36px;
+  padding: 24px 0 24px 36px;
   border-bottom: 1px solid c.$black-theme;
-  // background-color: c.$black-theme;
+  color: c.$black-theme;
   transition: all 0.5s cubic-bezier(0, 1, 0, 1);
 }
 
@@ -31,8 +32,9 @@
 }
 
 .accordion-content {
-  font-size: 12px;
-  width: 60%;
+  font-size: 16px;
+  line-height: 28px;
+  width: 90%;
   max-height: 0;
   color: c.$black-theme;
   overflow: hidden;
@@ -40,8 +42,10 @@
 }
 
 .accordion-content.show {
-  font-size: 12px;
-  width: 60%;
+  font-size: 16px;
+  line-height: 28px;
+  color: c.$black-theme;
+  width: 90%;
   height: auto;
   max-height: 9999px;
   // background-color: c.$black-theme;
