--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -132,6 +132,67 @@
   height: 576px;
   width: 100%;
   background-color: darkslategrey;
+  display: flex;
+}
+.section-3 .section-3a .section-3a-left {
+  width: 40%;
+}
+.section-3 .section-3a .section-3a-left img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.section-3 .section-3a .section-3a-right {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+}
+.section-3 .section-3a .section-3a-right .section-3a-34 {
+  display: flex;
+  width: 100%;
+  height: 50%;
+}
+.section-3 .section-3a .section-3a-right .section-3a-34 div:nth-child(1) {
+  width: 70%;
+}
+.section-3 .section-3a .section-3a-right .section-3a-34 div:nth-child(1) img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+.section-3 .section-3a .section-3a-right .section-3a-34 div:nth-child(2) {
+  width: 30%;
+}
+.section-3 .section-3a .section-3a-right .section-3a-34 div:nth-child(2) img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+.section-3 .section-3a .section-3a-right .section-3a-45 {
+  display: flex;
+  width: 100%;
+  height: 50%;
+}
+.section-3 .section-3a .section-3a-right .section-3a-45 div:nth-child(1) {
+  width: 50%;
+}
+.section-3 .section-3a .section-3a-right .section-3a-45 div:nth-child(1) img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+.section-3 .section-3a .section-3a-right .section-3a-45 div:nth-child(2) {
+  width: 50%;
+}
+.section-3 .section-3a .section-3a-right .section-3a-45 div:nth-child(2) img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 100%;
+  width: 100%;
 }
 .section-3 .section-3b {
   text-align: center;
@@ -342,8 +403,41 @@
   margin-top: 20px;
 }
 
+.section-6 {
+  margin-top: 176px;
+  border-top: 1px solid #211f1a;
+  width: 100%;
+  text-align: center;
+}
+
 .section-6-wrapper {
   margin: 164px 0 240px;
+}
+
+.section-7 {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 114px;
+}
+.section-7 .section-7a {
+  width: 60%;
+}
+.section-7 .section-7a h1 {
+  font-size: 52px;
+  font-weight: 400;
+  margin-top: 0;
+}
+.section-7 .section-7a h3 {
+  font-size: 20px;
+  margin: 32px 0 8px;
+}
+.section-7 .section-7a p {
+  margin: 0;
+}
+.section-7 .google-map-container {
+  margin: 56px 0 116px;
 }
 
 header {
@@ -436,31 +530,67 @@ header {
   transition: all 0.5s cubic-bezier(1, 0, 1, 0);
 }
 
-.section-6-wrapper {
-  background-color: lightblue;
+.slider-container {
+  position: relative;
+  overflow: hidden;
   width: 100%;
+  height: 300px;
 }
 
-label {
-  font-size: 32px;
+.slider-wrapper {
+  display: flex;
+  width: 500%;
+  transition: transform 0.5s ease;
 }
 
-select {
-  font-size: 32px;
-  font-weight: bold;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  background: none;
+.slider-card {
+  flex: 1 0 20%;
+  padding: 20px;
+  border: 1px solid #ccc;
+  margin-right: 20px;
+}
+
+.slider-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 10px;
   border: none;
-  border-bottom: 1px #211f1a;
-  padding: 0.5em 3em 1em 0.5em;
+  background-color: #fff;
+  cursor: pointer;
 }
-select option {
-  background-color: #211f1a;
-  color: white;
-  font-size: 16px;
-  padding: 12px 12px;
+
+.prev {
+  left: 0;
+}
+
+.next {
+  right: 0;
+}
+
+@keyframes slide {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+.section-4-slider-container {
+  overflow: hidden;
+}
+
+.section-4-slider {
+  height: 48px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  white-space: nowrap;
+  animation: 15s slide infinite linear;
+}
+.section-4-slider .slider-item {
+  padding: 4px 16px;
+  border-right: 1px solid #211f1a;
 }
 
 *,
