--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -403,26 +403,43 @@
   margin-top: 20px;
 }
 
-.section-6 {
+.cardSliderSection {
   margin-top: 176px;
   border-top: 1px solid #211f1a;
   width: 100%;
+  height: 980px;
   text-align: center;
+  background-color: #e8e8e8;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
-.section-6-wrapper {
-  margin: 164px 0 240px;
+.cardSliderSection__heading {
+  font-size: 52px;
+  font-weight: 400;
+  margin-bottom: 0;
+}
+.cardSliderSection__body {
+  font-size: 20px;
+  margin-bottom: 60px;
+}
+.cardSliderSection__module {
+  width: 100%;
 }
 
 .section-7 {
   text-align: center;
+  height: 800px;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  padding-top: 114px;
+  border-top: 1px solid #211f1a;
+}
+.section-7 iframe {
+  width: 50%;
 }
 .section-7 .section-7a {
-  width: 60%;
+  width: 50%;
+  padding: 0 36px;
 }
 .section-7 .section-7a h1 {
   font-size: 52px;
@@ -530,42 +547,29 @@ header {
   transition: all 0.5s cubic-bezier(1, 0, 1, 0);
 }
 
-.slider-container {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  height: 300px;
-}
-
-.slider-wrapper {
+.card {
+  background-color: white;
   display: flex;
-  width: 500%;
-  transition: transform 0.5s ease;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 380px;
+  height: 620px;
+  border-radius: 12px;
 }
-
-.slider-card {
-  flex: 1 0 20%;
-  padding: 20px;
-  border: 1px solid #ccc;
-  margin-right: 20px;
+.card__title {
+  margin-bottom: 40px;
 }
-
-.slider-button {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  padding: 10px;
-  border: none;
-  background-color: #fff;
-  cursor: pointer;
+.card__body {
+  width: 80%;
 }
-
-.prev {
-  left: 0;
-}
-
-.next {
-  right: 0;
+.card__cta-btn {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  border: 2px solid black;
+  border-radius: 8px;
+  padding: 16px 32px;
 }
 
 @keyframes slide {
@@ -586,7 +590,7 @@ header {
   justify-content: space-evenly;
   align-items: center;
   white-space: nowrap;
-  animation: 15s slide infinite linear;
+  animation: 25s slide infinite linear;
 }
 .section-4-slider .slider-item {
   padding: 4px 16px;
