--- a/src/scss/components/_CardSlider.scss
+++ b/src/scss/components/_CardSlider.scss
@@ -1,37 +1,24 @@
-.slider-container {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  height: 300px;
-}
-
-.slider-wrapper {
+.card {
+  background-color: white;
   display: flex;
-  width: calc(100% * 5);
-  transition: transform 0.5s ease;
-}
-
-.slider-card {
-  flex: 1 0 20%;
-  padding: 20px;
-  border: 1px solid #ccc;
-  margin-right: 20px;
-}
-
-.slider-button {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  padding: 10px;
-  border: none;
-  background-color: #fff;
-  cursor: pointer;
-}
-
-.prev {
-  left: 0;
-}
-
-.next {
-  right: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 380px;
+  height: 620px;
+  border-radius: 12px;
+  &__title {
+    margin-bottom: 40px;
+  }
+  &__body {
+    width: 80%;
+  }
+  &__cta-btn {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    border: 2px solid black;
+    border-radius: 8px;
+    padding: 16px 32px;
+  }
 }
