--- a/src/scss/pages/_Home.scss
+++ b/src/scss/pages/_Home.scss
@@ -412,25 +412,43 @@
 }
 
 // ! Section 6
-.section-6 {
+.cardSliderSection {
   margin-top: 176px;
   border-top: 1px solid c.$black-theme;
   width: 100%;
+  height: 980px;
   text-align: center;
-}
-.section-6-wrapper {
-  margin: 164px 0 240px;
+  background-color: #e8e8e8;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  &__heading {
+    font-size: 52px;
+    font-weight: 400;
+    margin-bottom: 0;
+  }
+  &__body {
+    font-size: 20px;
+    margin-bottom: 60px;
+  }
+  &__module {
+    width: 100%;
+  }
 }
 
 // ! Section 7
 .section-7 {
   text-align: center;
+  height: 800px;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  padding-top: 114px;
+  border-top: 1px solid c.$black-theme;
+  iframe {
+    width: 50%;
+  }
   .section-7a {
-    width: 60%;
+    width: 50%;
+    padding: 0 36px;
     h1 {
       font-size: 52px;
       font-weight: 400;
