--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -328,7 +328,7 @@
   width: 100%;
   background-color: #211f1a;
   padding-top: 280px;
-  padding-bottom: 80px;
+  padding-bottom: 320px;
   color: #fffcfa;
 }
 .section-5 .section-5-wrapper {
@@ -404,12 +404,13 @@
 }
 
 .cardSliderSection {
-  margin-top: 176px;
   border-top: 1px solid #211f1a;
   width: 100%;
   height: 980px;
+  color: #fffcfa;
   text-align: center;
-  background-color: #e8e8e8;
+  background-image: url(./../Images/card-slider-section-background.svg);
+  background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -548,28 +549,61 @@ header {
 }
 
 .card {
+  color: black;
   background-color: white;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
+  width: 380px;
+  height: 620px;
+  border-radius: 12px;
+  padding: 16px 0 38px 0;
+}
+
+.cardContent {
+  display: flex;
+  flex-direction: column;
   align-items: center;
   width: 380px;
   height: 620px;
   border-radius: 12px;
 }
-.card__title {
-  margin-bottom: 40px;
+.cardContent__title {
+  margin: 8px 0 20px 0;
+  font-size: 32px;
+  font-weight: 500;
 }
-.card__body {
+.cardContent__body {
   width: 80%;
 }
-.card__cta-btn {
+.cardContent__img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 95%;
+  border-top: 1px solid black;
+  position: relative;
+}
+.cardContent__img::after {
+  width: 12px;
+  height: 12px;
+  background: red;
+  position: absolute;
+  display: inline-block;
+  top: 0;
+  left: 50%;
+  content: "";
+  inset: 0;
+}
+
+.cardLink__cta-btn {
   text-decoration: none;
   color: black;
   font-weight: bold;
   border: 2px solid black;
   border-radius: 8px;
   padding: 16px 32px;
+  display: inline-block;
 }
 
 @keyframes slide {
