--- a/src/scss/components/_CardSlider.scss
+++ b/src/scss/components/_CardSlider.scss
@@ -1,18 +1,51 @@
 .card {
+  color: black;
   background-color: white;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
+  width: 380px;
+  height: 620px;
+  border-radius: 12px;
+  padding: 16px 0 38px 0;
+}
+
+.cardContent {
+  display: flex;
+  flex-direction: column;
   align-items: center;
   width: 380px;
   height: 620px;
   border-radius: 12px;
   &__title {
-    margin-bottom: 40px;
+    margin: 8px 0 20px 0;
+    font-size: 32px;
+    font-weight: 500;
   }
   &__body {
     width: 80%;
   }
+  &__img {
+    object-fit: cover;
+    width: 95%;
+    border-top: 1px solid black;
+    position: relative;
+    &::after {
+      width: 12px;
+      height: 12px;
+      background: red;
+      position: absolute;
+      display: inline-block;
+      top: 0;
+      left: 50%;
+      content: "";
+      inset: 0;
+    }
+  }
+}
+
+.cardLink {
   &__cta-btn {
     text-decoration: none;
     color: black;
@@ -20,5 +53,6 @@
     border: 2px solid black;
     border-radius: 8px;
     padding: 16px 32px;
+    display: inline-block;
   }
 }
