--- a/src/scss/pages/_Home.scss
+++ b/src/scss/pages/_Home.scss
@@ -336,7 +336,7 @@
   width: 100%;
   background-color: c.$black-theme;
   padding-top: 280px;
-  padding-bottom: 80px;
+  padding-bottom: 320px;
   color: #fffcfa;
   .section-5-wrapper {
     max-width: 1440px;
@@ -413,12 +413,13 @@
 
 // ! Section 6
 .cardSliderSection {
-  margin-top: 176px;
   border-top: 1px solid c.$black-theme;
   width: 100%;
   height: 980px;
+  color: #fffcfa;
   text-align: center;
-  background-color: #e8e8e8;
+  background-image: url(./../Images/card-slider-section-background.svg);
+  background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
