--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -57,9 +57,10 @@
   align-items: center;
   justify-content: space-around;
   padding-left: 60px;
+  max-width: 550px;
 }
 .section-1 .section-1b .section-1b-wrapper .section-1b-text {
-  width: 440px;
+  width: 90%;
   text-align: center;
 }
 .section-1 .section-1b .section-1b-wrapper .section-1b-text h2 {
@@ -85,7 +86,7 @@
   background-color: #94a689;
   height: 100%;
   width: 100%;
-  padding: 134px 0 0 24px;
+  padding: 100px 0 0 24px;
   display: flex;
   justify-content: flex-end;
 }
@@ -111,103 +112,130 @@
   font-size: 14px;
 }
 .section-2 .section-2b {
-  width: 612px;
   width: 42%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
+  padding-top: 80px;
 }
 .section-2 .section-2b .section-2b-wrapper {
-  width: 540px;
+  max-width: 540px;
   padding: 24px;
 }
 
-.section-3 {
+.gridImageSection {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 206px;
 }
-.section-3 .section-3a {
+.gridImageSection__Grid {
   height: 576px;
   width: 100%;
-  background-color: darkslategrey;
   display: flex;
 }
-.section-3 .section-3a .section-3a-left {
+.gridImageSection__Grid .section-3a-left {
   width: 40%;
+  position: relative;
 }
-.section-3 .section-3a .section-3a-left img {
+.gridImageSection__Grid .section-3a-left img {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
   height: 100%;
 }
-.section-3 .section-3a .section-3a-right {
+.gridImageSection__Grid .section-3a-left:hover {
+  transition: 2s;
+}
+.gridImageSection__Grid .section-3a-left:hover::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 40px;
+  background: linear-gradient(transparent, black);
+  transition-duration: 2s;
+}
+.gridImageSection__Grid .section-3a-left:hover::after {
+  content: "Dark Suite - Interior";
+  position: absolute;
+  bottom: 40px;
+  left: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  width: 200px;
+  height: 36px;
+  background: black;
+  border-radius: 40px;
+}
+.gridImageSection .section-3a-right {
   width: 60%;
   display: flex;
   flex-direction: column;
 }
-.section-3 .section-3a .section-3a-right .section-3a-34 {
+.gridImageSection .section-3a-right .section-3a-34 {
   display: flex;
   width: 100%;
   height: 50%;
 }
-.section-3 .section-3a .section-3a-right .section-3a-34 div:nth-child(1) {
+.gridImageSection .section-3a-right .section-3a-34 div:nth-child(1) {
   width: 70%;
 }
-.section-3 .section-3a .section-3a-right .section-3a-34 div:nth-child(1) img {
+.gridImageSection .section-3a-right .section-3a-34 div:nth-child(1) img {
   -o-object-fit: cover;
      object-fit: cover;
   height: 100%;
   width: 100%;
 }
-.section-3 .section-3a .section-3a-right .section-3a-34 div:nth-child(2) {
+.gridImageSection .section-3a-right .section-3a-34 div:nth-child(2) {
   width: 30%;
 }
-.section-3 .section-3a .section-3a-right .section-3a-34 div:nth-child(2) img {
+.gridImageSection .section-3a-right .section-3a-34 div:nth-child(2) img {
   -o-object-fit: cover;
      object-fit: cover;
   height: 100%;
   width: 100%;
 }
-.section-3 .section-3a .section-3a-right .section-3a-45 {
+.gridImageSection .section-3a-right .section-3a-45 {
   display: flex;
   width: 100%;
   height: 50%;
 }
-.section-3 .section-3a .section-3a-right .section-3a-45 div:nth-child(1) {
+.gridImageSection .section-3a-right .section-3a-45 div:nth-child(1) {
   width: 50%;
 }
-.section-3 .section-3a .section-3a-right .section-3a-45 div:nth-child(1) img {
+.gridImageSection .section-3a-right .section-3a-45 div:nth-child(1) img {
   -o-object-fit: cover;
      object-fit: cover;
   height: 100%;
   width: 100%;
 }
-.section-3 .section-3a .section-3a-right .section-3a-45 div:nth-child(2) {
+.gridImageSection .section-3a-right .section-3a-45 div:nth-child(2) {
   width: 50%;
 }
-.section-3 .section-3a .section-3a-right .section-3a-45 div:nth-child(2) img {
+.gridImageSection .section-3a-right .section-3a-45 div:nth-child(2) img {
   -o-object-fit: cover;
      object-fit: cover;
   height: 100%;
   width: 100%;
 }
-.section-3 .section-3b {
+.gridImageSection__body {
   text-align: center;
   width: 70%;
 }
-.section-3 .section-3b h2 {
+.gridImageSection__body h2 {
   font-size: 52px;
   font-weight: 400;
   margin-top: 62px;
 }
-.section-3 .section-3b p {
+.gridImageSection__body p {
   font-size: 20px;
   margin: 32px 0;
 }
-.section-3 .section-3b a {
+.gridImageSection__body a {
   margin-top: 74px;
   margin-bottom: 400px;
 }
@@ -352,6 +380,11 @@
   margin-top: 0;
   width: 90%;
 }
+.section-5 .section-5-wrapper .section-5a img {
+  -o-object-fit: contain;
+     object-fit: contain;
+  width: 100%;
+}
 .section-5 .section-5-wrapper .section-5a a {
   color: #fffcfa;
   font-size: 12px;
@@ -375,6 +408,11 @@
   margin-top: 0;
   width: 90%;
 }
+.section-5 .section-5-wrapper .section-5b img {
+  -o-object-fit: contain;
+     object-fit: contain;
+  width: 100%;
+}
 .section-5 .section-5-wrapper .section-5b a {
   color: #fffcfa;
   font-size: 12px;
@@ -396,6 +434,11 @@
 .section-5 .section-5-wrapper .section-5c p {
   margin-top: 0;
   width: 90%;
+}
+.section-5 .section-5-wrapper .section-5c img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
 }
 .section-5 .section-5-wrapper .section-5c a {
   color: #fffcfa;
@@ -428,34 +471,60 @@
   width: 100%;
 }
 
-.section-7 {
+.howToGetHereSection {
   text-align: center;
   height: 800px;
   display: flex;
   align-items: center;
   border-top: 1px solid #211f1a;
 }
-.section-7 iframe {
+.howToGetHereSection__googleMap {
+  height: 100%;
   width: 50%;
+  background-color: #788a6d;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  filter: grayscale(100%);
 }
-.section-7 .section-7a {
-  width: 50%;
-  padding: 0 36px;
+.howToGetHereSection__mapDetails {
+  position: absolute;
+  bottom: 28px;
+  left: 28px;
+  background-color: #211f1a;
+  border-radius: 20px;
+  padding: 24px 40px 24px 24px;
+  color: white;
+  text-align: left;
 }
-.section-7 .section-7a h1 {
+.howToGetHereSection__mapDetails P {
+  margin: 6px 0;
+  font-weight: 300;
+}
+.howToGetHereSection__mapDetails .title {
+  font-size: 20px;
+  font-weight: 400;
+}
+.howToGetHereSection__body {
+  height: 100%;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 48px;
+  border-left: solid 1px #211f1a;
+}
+.howToGetHereSection__body h1 {
   font-size: 52px;
   font-weight: 400;
   margin-top: 0;
 }
-.section-7 .section-7a h3 {
+.howToGetHereSection__body h3 {
   font-size: 20px;
   margin: 32px 0 8px;
 }
-.section-7 .section-7a p {
+.howToGetHereSection__body p {
   margin: 0;
-}
-.section-7 .google-map-container {
-  margin: 56px 0 116px;
 }
 
 header {
@@ -497,19 +566,14 @@ header {
   padding: 0 24px;
 }
 
-.accordion-wrapper {
-  width: 612px;
-  padding-left: 24px;
-}
-
 .accordion-item {
-  padding: 24px 0 24px 36px;
+  padding: 24px 0 24px 0;
   border-bottom: 1px solid #211f1a;
   transition: all 0.5s cubic-bezier(0, 1, 0, 1);
 }
 
 .accordion-item.show {
-  padding: 24px 0 24px 36px;
+  padding: 24px 0 24px 0;
   border-bottom: 1px solid #211f1a;
   color: #211f1a;
   transition: all 0.5s cubic-bezier(0, 1, 0, 1);
@@ -559,6 +623,7 @@ header {
   height: 620px;
   border-radius: 12px;
   padding: 16px 0 38px 0;
+  margin: 0 12px;
 }
 
 .cardContent {
@@ -629,6 +694,19 @@ header {
 .section-4-slider .slider-item {
   padding: 4px 16px;
   border-right: 1px solid #211f1a;
+}
+
+.footer {
+  background-color: #211f1a;
+  width: 100%;
+  height: 298px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer__wrapper {
+  text-align: center;
 }
 
 *,
