--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -4,6 +4,7 @@
 @use "./components/Accordion";
 @use "./components/CardSlider";
 @use "./components/InfiniteSlider";
+@use "./components/Footer";
 
 // Abstracts
 @use "./abstracts/colors";
