--- a/src/scss/components/_Accordion.scss
+++ b/src/scss/components/_Accordion.scss
@@ -1,18 +1,17 @@
 @use "../abstracts/colors" as c;
 
 .accordion-wrapper {
-  width: 612px;
-  padding-left: 24px;
+  // width: 612px;
 }
 
 .accordion-item {
-  padding: 24px 0 24px 36px;
+  padding: 24px 0 24px 0;
   border-bottom: 1px solid c.$black-theme;
   transition: all 0.5s cubic-bezier(0, 1, 0, 1);
 }
 
 .accordion-item.show {
-  padding: 24px 0 24px 36px;
+  padding: 24px 0 24px 0;
   border-bottom: 1px solid c.$black-theme;
   color: c.$black-theme;
   transition: all 0.5s cubic-bezier(0, 1, 0, 1);
