--- a/src/scss/components/_CardSlider.scss
+++ b/src/scss/components/_CardSlider.scss
@@ -1,3 +1,7 @@
+// .cardSliderContainer {
+//   max-width: 2300px;
+// }
+
 .card {
   color: black;
   background-color: white;
@@ -9,6 +13,7 @@
   height: 620px;
   border-radius: 12px;
   padding: 16px 0 38px 0;
+  margin: 0 12px;
 }
 
 .cardContent {
