--- a/src/scss/pages/_Home.scss
+++ b/src/scss/pages/_Home.scss
@@ -58,8 +58,9 @@
       align-items: center;
       justify-content: space-around;
       padding-left: 60px;
+      max-width: 550px;
       .section-1b-text {
-        width: 440px;
+        width: 90%;
         text-align: center;
         h2 {
           margin: 0;
@@ -87,7 +88,7 @@
       background-color: #94a689;
       height: 100%;
       width: 100%;
-      padding: 134px 0 0 24px;
+      padding: 100px 0 0 24px;
       display: flex;
       justify-content: flex-end;
       .section-2a-copy {
@@ -114,86 +115,114 @@
     }
   }
   .section-2b {
-    width: 612px;
     width: 42%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
+    padding-top: 80px;
     .section-2b-wrapper {
-      width: 540px;
+      max-width: 540px;
       padding: 24px;
     }
   }
 }
 
 // ! Section 3
-.section-3 {
+.gridImageSection {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 206px;
-  .section-3a {
+  &__Grid {
     height: 576px;
     width: 100%;
-    background-color: darkslategrey;
     display: flex;
     .section-3a-left {
       width: 40%;
+      position: relative;
       img {
         object-fit: cover;
         width: 100%;
         height: 100%;
       }
-    }
-    .section-3a-right {
-      width: 60%;
-      display: flex;
-      flex-direction: column;
-      .section-3a-34 {
-        display: flex;
+      &:hover {
+        transition: 2s;
+      }
+      &:hover::before {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
         width: 100%;
-        height: 50%;
-        div:nth-child(1) {
-          width: 70%;
-          img {
-            object-fit: cover;
-            height: 100%;
-            width: 100%;
-          }
-        }
-        div:nth-child(2) {
-          width: 30%;
-          img {
-            object-fit: cover;
-            height: 100%;
-            width: 100%;
-          }
+        height: 40px;
+        background: linear-gradient(transparent, black);
+        transition-duration: 2s;
+      }
+      &:hover::after {
+        content: "Dark Suite - Interior";
+        position: absolute;
+        bottom: 40px;
+        left: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        width: 200px;
+        height: 36px;
+        background: black;
+        border-radius: 40px;
+      }
+    }
+  }
+  .section-3a-right {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    .section-3a-34 {
+      display: flex;
+      width: 100%;
+      height: 50%;
+      div:nth-child(1) {
+        width: 70%;
+        img {
+          object-fit: cover;
+          height: 100%;
+          width: 100%;
         }
       }
-      .section-3a-45 {
-        display: flex;
-        width: 100%;
-        height: 50%;
-        div:nth-child(1) {
-          width: 50%;
-          img {
-            object-fit: cover;
-            height: 100%;
-            width: 100%;
-          }
+      div:nth-child(2) {
+        width: 30%;
+        img {
+          object-fit: cover;
+          height: 100%;
+          width: 100%;
         }
-        div:nth-child(2) {
-          width: 50%;
-          img {
-            object-fit: cover;
-            height: 100%;
-            width: 100%;
-          }
+      }
+    }
+    .section-3a-45 {
+      display: flex;
+      width: 100%;
+      height: 50%;
+      div:nth-child(1) {
+        width: 50%;
+        img {
+          object-fit: cover;
+          height: 100%;
+          width: 100%;
+        }
+      }
+      div:nth-child(2) {
+        width: 50%;
+        img {
+          object-fit: cover;
+          height: 100%;
+          width: 100%;
         }
       }
     }
   }
-  .section-3b {
+
+  &__body {
     text-align: center;
     width: 70%;
     h2 {
@@ -357,6 +386,10 @@
         margin-top: 0;
         width: 90%;
       }
+      img {
+        object-fit: contain;
+        width: 100%;
+      }
       a {
         color: #fffcfa;
         font-size: 12px;
@@ -380,6 +413,10 @@
         margin-top: 0;
         width: 90%;
       }
+      img {
+        object-fit: contain;
+        width: 100%;
+      }
       a {
         color: #fffcfa;
         font-size: 12px;
@@ -401,6 +438,10 @@
       p {
         margin-top: 0;
         width: 90%;
+      }
+      img {
+        object-fit: cover;
+        width: 100%;
       }
       a {
         color: #fffcfa;
@@ -438,18 +479,47 @@
 }
 
 // ! Section 7
-.section-7 {
+.howToGetHereSection {
   text-align: center;
   height: 800px;
   display: flex;
   align-items: center;
   border-top: 1px solid c.$black-theme;
-  iframe {
+  &__googleMap {
+    height: 100%;
     width: 50%;
+    background-color: #788a6d;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    filter: grayscale(100%);
   }
-  .section-7a {
-    width: 50%;
-    padding: 0 36px;
+  &__mapDetails {
+    position: absolute;
+    bottom: 28px;
+    left: 28px;
+    background-color: c.$black-theme;
+    border-radius: 20px;
+    padding: 24px 40px 24px 24px;
+    color: white;
+    text-align: left;
+    P {
+      margin: 6px 0;
+      font-weight: 300;
+    }
+    .title {
+      font-size: 20px;
+      font-weight: 400;
+    }
+  }
+  &__body {
+    height: 100%;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 48px;
+    border-left: solid 1px c.$black-theme;
     h1 {
       font-size: 52px;
       font-weight: 400;
@@ -462,8 +532,5 @@
     p {
       margin: 0;
     }
-  }
-  .google-map-container {
-    margin: 56px 0 116px;
   }
 }
