--- a/src/scss/pages/_Home.scss
+++ b/src/scss/pages/_Home.scss
@@ -657,7 +657,7 @@ $mobile-view: 1060px;
 // ! Section 7
 .howToGetHereSection {
   text-align: center;
-  min-height: 800px;
+  height: 800px;
   display: flex;
   align-items: center;
   border-top: 1px solid c.$black-theme;
