--- a/src/scss/pages/_Home.scss
+++ b/src/scss/pages/_Home.scss
@@ -14,6 +14,9 @@ $mobile-view: 1060px;
 .large-logo-wrapper {
   display: flex;
   justify-content: center;
+  position: fixed;
+  top: 58;
+  z-index: 999;
 }
 
 .large-logo {
@@ -27,6 +30,7 @@ $mobile-view: 1060px;
   height: 1090px;
   width: 100%;
   display: flex;
+  margin-top: 125px;
   justify-content: center;
   @media (max-width: $mobile-view) {
     flex-direction: column;
