--- a/src/scss/components/_InfiniteSlider.scss
+++ b/src/scss/components/_InfiniteSlider.scss
@@ -5,7 +5,7 @@
     transform: translateX(0);
   }
   to {
-    transform: translateX(-100%);
+    transform: translateX(-50%);
   }
 }
 
@@ -24,5 +24,10 @@
     padding: 4px 16px;
     border-right: 1px solid c.$black-theme;
     // display: inline-block;
+    display: flex;
+    align-items: center;
+    img {
+      padding-right: 8px;
+    }
   }
 }
