--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -68,6 +68,7 @@
 @media (max-width: 1060px) {
   .section-1 .section-1a .section-1a-wrapper {
     width: 100%;
+    height: 486px;
     justify-content: center;
     border: none;
   }
@@ -85,7 +86,8 @@
 }
 @media (max-width: 1060px) {
   .section-1 .section-1a .section-1a-wrapper .svgMapContainer {
-    margin: 40px 0;
+    margin: 60px 20px;
+    height: 486px;
   }
 }
 .section-1 .section-1a .section-1a-wrapper .svgMapContainer .location-map {
@@ -268,7 +270,7 @@
   transition-duration: 2s;
 }
 .gridImageSection__Grid .section-3a-left:hover::after {
-  content: "Dark Suite - Interior";
+  content: "Celestial Suite - Living";
   position: absolute;
   margin: 0 auto;
   bottom: 40px;
@@ -316,7 +318,7 @@
   transition-duration: 2s;
 }
 .gridImageSection .section-3a-right .section-3a-34 div:nth-child(1):hover::after {
-  content: "Dark Suite - Interior";
+  content: "Celestial Deluxe - Lounge";
   position: absolute;
   margin: 0 auto;
   bottom: 40px;
@@ -354,7 +356,7 @@
   transition-duration: 2s;
 }
 .gridImageSection .section-3a-right .section-3a-34 div:nth-child(2):hover::after {
-  content: "Dark Suite - Interior";
+  content: "Breakfast";
   position: absolute;
   margin: 0 auto;
   bottom: 40px;
@@ -397,7 +399,7 @@
   transition-duration: 2s;
 }
 .gridImageSection .section-3a-right .section-3a-45 div:nth-child(1):hover::after {
-  content: "Dark Suite - Interior";
+  content: "Celestial Suite - Bath";
   position: absolute;
   margin: 0 auto;
   bottom: 40px;
@@ -435,7 +437,7 @@
   transition-duration: 2s;
 }
 .gridImageSection .section-3a-right .section-3a-45 div:nth-child(2):hover::after {
-  content: "Dark Suite - Interior";
+  content: "Celestial Suite - Bedroom";
   position: absolute;
   margin: 0 auto;
   bottom: 40px;
