--- a/src/scss/pages/_Home.scss
+++ b/src/scss/pages/_Home.scss
@@ -63,6 +63,7 @@ $mobile-view: 1060px;
       align-items: center;
       @media (max-width: $mobile-view) {
         width: 100%;
+        height: 486px;
         justify-content: center;
         border: none;
       }
@@ -76,7 +77,8 @@ $mobile-view: 1060px;
         object-fit: contain;
         position: relative;
         @media (max-width: $mobile-view) {
-          margin: 40px 0;
+          margin: 60px 20px;
+          height: 486px;
         }
         .location-map {
           transform: rotate(45deg);
@@ -243,7 +245,7 @@ $mobile-view: 1060px;
         transition-duration: 2s;
       }
       &:hover::after {
-        content: "Dark Suite - Interior";
+        content: "Celestial Suite - Living";
         position: absolute;
         margin: 0 auto;
         bottom: 40px;
@@ -289,7 +291,7 @@ $mobile-view: 1060px;
           transition-duration: 2s;
         }
         &:hover::after {
-          content: "Dark Suite - Interior";
+          content: "Celestial Deluxe - Lounge";
           position: absolute;
           margin: 0 auto;
           bottom: 40px;
@@ -326,7 +328,7 @@ $mobile-view: 1060px;
           transition-duration: 2s;
         }
         &:hover::after {
-          content: "Dark Suite - Interior";
+          content: "Breakfast";
           position: absolute;
           margin: 0 auto;
           bottom: 40px;
@@ -368,7 +370,7 @@ $mobile-view: 1060px;
           transition-duration: 2s;
         }
         &:hover::after {
-          content: "Dark Suite - Interior";
+          content: "Celestial Suite - Bath";
           position: absolute;
           margin: 0 auto;
           bottom: 40px;
@@ -405,7 +407,7 @@ $mobile-view: 1060px;
           transition-duration: 2s;
         }
         &:hover::after {
-          content: "Dark Suite - Interior";
+          content: "Celestial Suite - Bedroom";
           position: absolute;
           margin: 0 auto;
           bottom: 40px;
