--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -5,6 +5,7 @@
 @use "./components/CardSlider";
 @use "./components/InfiniteSlider";
 @use "./components/Footer";
+@use "./components/GridToCarousel";
 
 // Abstracts
 @use "./abstracts/colors";
