--- a/src/scss/components/_Accordion.scss
+++ b/src/scss/components/_Accordion.scss
@@ -46,6 +46,7 @@
   color: c.$black-theme;
   width: 90%;
   height: auto;
+  margin-top: 12px;
   max-height: 9999px;
   // background-color: c.$black-theme;
   transition: all 0.5s cubic-bezier(1, 0, 1, 0);
