--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -1039,6 +1039,19 @@ header {
   background-image: linear-gradient(transparent, black);
 }
 
+.carouselCaptionContainer {
+  display: flex;
+  justify-content: center;
+}
+
+.carouselCaption {
+  text-align: center;
+  font-size: 12px;
+  background-color: black;
+  padding: 10px 12px;
+  border-radius: 100px;
+}
+
 *,
 *::after,
 *::before {
