--- a/src/scss/components/_GridToCarousel.scss
+++ b/src/scss/components/_GridToCarousel.scss
@@ -19,3 +19,16 @@
     }
   }
 }
+
+.carouselCaptionContainer {
+  display: flex;
+  justify-content: center;
+}
+
+.carouselCaption {
+  text-align: center;
+  font-size: 12px;
+  background-color: black;
+  padding: 10px 12px;
+  border-radius: 100px;
+}
