--- a/src/scss/pages/_Home.scss
+++ b/src/scss/pages/_Home.scss
@@ -676,6 +676,7 @@ $mobile-view: 1060px;
       img {
         object-fit: cover;
         width: 100%;
+        padding: 16px 0;
       }
       a {
         color: #fffcfa;
