--- a/src/scss/components/_Footer.scss
+++ b/src/scss/components/_Footer.scss
@@ -11,7 +11,9 @@ $mobile-view: 1060px;
   justify-content: center;
   align-items: center;
   padding: 32px 0;
-
+  @media (max-width: $mobile-view) {
+    height: 380px;
+  }
   &__wrapper {
     text-align: center;
     width: 85%;
